@startuml

title __DECORATOR's Class Diagram__\n

  namespace com.itbird.design {
    namespace decorator {
      class com.itbird.design.decorator.DecoratorActivity {
          + buttonv1()
          + buttonv2()
          + buttonv3()
          # onCreate()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace decorator {
      class com.itbird.design.decorator.DecoratorActivity.MyRecycleViewAdapter {
          {static} - TAG : String
          - data : List<String>
          - mContext : Context
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setData()
          ~ MyRecycleViewAdapter()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace decorator {
      class com.itbird.design.decorator.DecoratorActivity.MyRecycleViewAdapter.MyViewHolder {
          + MyViewHolder()
      }
    }
  }
  

  com.itbird.design.decorator.DecoratorActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.itbird.design.decorator.DecoratorActivity o-- com.itbird.design.decorator.DecoratorActivity.MyRecycleViewAdapter : adapter
  com.itbird.design.decorator.DecoratorActivity +-down- com.itbird.design.decorator.DecoratorActivity.MyRecycleViewAdapter
  com.itbird.design.decorator.DecoratorActivity.MyRecycleViewAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.itbird.design.decorator.DecoratorActivity.MyRecycleViewAdapter +-down- com.itbird.design.decorator.DecoratorActivity.MyRecycleViewAdapter.MyViewHolder
  com.itbird.design.decorator.DecoratorActivity.MyRecycleViewAdapter.MyViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
